Fix editor bug when lines wrap

--- a/src/player/player.less
+++ b/src/player/player.less
@@ -64,7 +64,7 @@
 
     .editor, .text {
       padding: 24px;
-      white-space: pre;
+      white-space: pre-wrap;
       text-rendering: optimizeSpeed; /* Jumps otherwise */
     }
 
